2002-05-24 09:46 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-find-matching-statement): Simplified the test of
	the `while'.

2002-05-24 09:41 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-font-lock-logic): Added.
	(xbase-logic-face): Added.
	(xbase-mode): Added logic operators to the font lock defaults.

2002-05-24 09:33 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-end-of-defun): Don't `loop' when `while' will
	do.

2002-05-23 10:32 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-end-of-defun): Added.
	(xbase-mode): Added `end-of-defun-function' as a local variable.
	Set it to the above. This means that `end-of-defun' will work in
	xbase buffers.

2002-05-23 10:16 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Added `defun-prompt-regexp' as a local
	variable. Set it to (xbase-rule-regexp 'xbase-defun). This means
	that `beginning-of-defun' will work in xbase buffers.

2002-05-23 10:08 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-describe-line): Added.
	(xbase-mode-map): Bound the above to "C-c C-l".

2002-05-23 09:56 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-line): Fixed `point' repositioning glitch
	introduced earlier.

2002-05-23 09:41 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el: Added documentation strings to various functions.

2002-05-22 18:18 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-calculate-indent-with-offset): Really fixed the
	error message (I'd forgotten to pass the value of `offset' to
	`error' so that the format string would have the corrent
	argument).

2002-05-22 17:52 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-calculate-indent-with-offset): Fixed error
	message.

2002-05-22 16:58 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-line): Modified to use
	`delete-horizontal-space'.

2002-05-22 14:55 UTC+0100  Dave Pearson  <davep@davep.org>
